<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title">My Nanodegree Apps!</string>
    <string name="app_name_streamer">Spotify Streamer</string>
    <string name="app_name_scores">Football Scores</string>
    <string name="app_name_library">Library</string>
    <string name="app_name_buildit">Build It Bigger</string>
    <string name="app_name_reader">XYZ Reader</string>
    <string name="app_name_capstone">Capstone</string>

</resources>
