<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"  >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_streamer"
            android:id="@+id/button"
            android:background="@color/blue_200"
            android:width="250dp"
            android:layout_margin="6dp"
            android:onClick="openStreamer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_scores"
            android:id="@+id/button2"
            android:background="@color/blue_200"
            android:width="250dp"
            android:layout_margin="6dp"
            android:onClick="openScores" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_library"
            android:id="@+id/button3"
            android:background="@color/blue_200"
            android:width="250dp"
            android:layout_margin="6dp"
            android:onClick="openLibrary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_buildit"
            android:id="@+id/button4"
            android:background="@color/blue_200"
            android:width="250dp"
            android:layout_margin="6dp"
            android:onClick="openBuildIt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_reader"
            android:id="@+id/button5"
            android:background="@color/blue_200"
            android:width="250dp"
            android:layout_margin="6dp"
            android:onClick="openReader" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_capstone"
            android:id="@+id/button6"
            android:background="@color/blue_500"
            android:width="250dp"
            android:layout_margin="6dp"
            android:onClick="openCapstone" />
    </LinearLayout>

</RelativeLayout>
